Update to add Corsican translations

--- a/bin/setup/lang/bsi_err.htm
+++ b/bin/setup/lang/bsi_err.htm
@@ -19,6 +19,8 @@
 
 
 [
+co: A cumanda « %d » s’hè piantata cù un codice di sbagliu.
+    Forse st’operazione ùn hè micca stata trattata.
 de: Das Kommando "%d" hat beim Beenden einen Fehler geliefert.
     Die Operation wurde möglicherweise nicht durchgeführt.
 en: The command "%d" exited with an error code. This operation may have not
@@ -40,6 +42,8 @@ sv: Kommandot "%d" avslutades med en felkod. Operationen kanske inte
 <p />
 
 [
+co: Eccu sò e traccie di a cumanda, forse ci truverete una
+    spiegazione :
 de: Hier sind die Trace-Ausgaben des Kommandos, vielleicht kannst du
     die Erklärung für das Problem erkennen:
 en: Here are the traces of the command, maybe you can find an explanation:
@@ -59,6 +63,7 @@ sv: Här är utskriften från kommandot, kanske du kan finna en förklaring:
 <dl><dt><dd>
 <pre>
 %g{- [
+co: nisuna traccia
 de: no traces
 en: no traces
 es: ningún indicio
@@ -73,6 +78,7 @@ sv: ingen utskrift
 
 <p />
 [
+co: È u cuntenutu di gwsetup.log
 en: And the content of gwsetup.log
 fr: Et le contenu de gwsetup.log
 ]
@@ -82,6 +88,7 @@ fr: Et le contenu de gwsetup.log
 <dl><dt><dd>
 <pre>
 %G{- [
+co: nisuna traccia
 de: no traces
 en: no traces
 es: ningún indicio
@@ -97,6 +104,8 @@ sv: ingen utskrift
 <p />
 
 [
+co: Osinnò pudete rivene à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
     menu</a>.
