--- a/bin/setup/lang/bso.htm
+++ b/bin/setup/lang/bso.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Creazione d’una genealugia
 de: Datenbank anlegen
 en: Creation of a database
 es: Creación de una base de datos
@@ -25,6 +26,7 @@ sv: Skapa en databas
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Creazione d’una genealugia
 de: Datenbank anlegen
 en: Creation of a database
 es: Creación de una base de datos
@@ -43,6 +45,9 @@ sv: Skapa en databas
 %v{<li>
 
 [
+co: <b>Avertimentu</b> : una basa di dati chjamata
+    « %o » esiste dighjà in u vostru <a href="gwsetup?lang=%l;v=list.htm">cartulare</a>. S’è vò
+	primete nant’à u buttone « Vai » quaghjò, sta genealugia serà squassata.
 de: <b>Warnung:</b> In deinem 
     <a href="gwsetup?lang=%l;v=list.htm">Verzeichnis</a>
     existiert bereits eine Datenbank mit dem Namen "%o".
@@ -73,6 +78,9 @@ sv: <b>Varning</b>: det existerar redan en databas med namnet "%o" i din
 ]<p />
 
 [
+co: S’è vò avete dighjà fattu st’azzione, forse ghjè u so risultatu,
+    è dunque ùn hè micca impurtante. Osinnò, rivinite à a pagina
+	precedente è sciglite un altru nome per a vostra basa.
 de: Falls du diese Funktion gerade schonmal ausgeführt hattest, dann
     war diese Datenbank wahrscheinlich das Ergebnis und daher kann dieser
     Fehler hier ignoriert werden. Andernfalls kehre auf die vorherige Seite
@@ -104,6 +112,10 @@ sv: Om du precis gjorde detta, har databasen blivit raderad nu.
 <li>
 
 [
+co: Avemu da creà una genealugia chì si chjama « %o ».
+    Rimarca : st’operazione pò fassi in furia o piglià
+	qualchì decine di seconda o parechji minuti secondu
+	à u casu. Aspettate per piacè.
 de: Wir legen nun eine Datenbank mit dem Namen "%o" an. 
     Beachte: Je nach Fall kann diese Operation nur ein Augenzwinkern
     lang dauern, oder aber wenige Sekunden oder sogar einige Minuten
@@ -135,6 +147,7 @@ sv: Vi ska nu skapa en databas benämnd "%o". Obs: denna operation
 <p />
 
 [
+co: Primete nant’à « Vai » per creà a vostra genealugia
 de: Drücke den Knopf, um die Datenbank anzulegen
 en: Push the button below to create you database
 es: Apoye en el botón inferior para crear su base de datos
@@ -143,7 +156,10 @@ fr: Appuyez sur Ok pour créer votre généalogie
 it: Cliccate sul bottone qui sotto per creare la vostra base di dati
 lv: Nospiediet zemâk esoðo podziòu, lai izveidotu datu bâzi
 sv: Tryck på knappen nedan för att skapa din databas
-]%v{<br /><blink><font color=red>[
+]
+%v{<br /><blink><font color=red>
+[
+co:  è rimpiazzà a basa « %o » in u cartulare di destinazione
 de:  und die alte Datenbank "%o" im Zielverzeichnis zu löschen
 en: , and overwrite the previous database "%o" of the target directory
 es:  y destruir  la base "%o" de la carpeta de llegada
@@ -167,6 +183,8 @@ sv:  och radera den föregående databasen "%o" från målkatalogen
 <p />
 
 [
+co: Per a vostra infurmazione, st’operazione currisponde
+    à sta seguita di cumande :
 de: Zu deiner Information: Diese Funktion entspricht der Ausführung
     der folgenden Kommandos:
 en: For information, this operation corresponds to the following commands:
@@ -186,6 +204,7 @@ sv: Denna operation motsvarar de följande kommandona:
 </pre>
 
 [
+co: Què custruiscerà un cartulare di nome « %o.gwb »
 de: Hierbei wird ein Verzeichnis namens "%o.gwb" angelegt.
 en: This builds a directory named "%o.gwb".
 es: Esto creará una carpeta de nombre "%o.gwb".
