--- a/bin/setup/lang/bso_err.htm
+++ b/bin/setup/lang/bso_err.htm
@@ -21,6 +21,8 @@
 <p />
 
 [
+co: A cumanda precedente s’hè piantata cù un codice di sbagliu.
+    Forse a vostra basa di dati ùn hè micca stata creata.
 de: Das vorangegangene Kommando hat beim Beenden einen Fehler geliefert.
     Deine Datenbank wurde möglicherweise nicht angelegt.
 en: The previous command exited with an error code. Your database may have
@@ -43,6 +45,8 @@ sv: Det föregående kommandot avslutades med en felkod. Din databas kanske
 <p />
 
 [
+co: Ci vole à fighjà e <a href="gwsetup?lang=%l;v=traces.htm">traccie</a>,
+    forse ci truverete una spiegazione.
 de: Du kannst dir seine <a
     href="gwsetup?lang=%l;v=traces.htm">Trace-Ausgaben</a> ansehen, 
     vielleicht kannst du die Erklärung für das Problem erkennen.
@@ -67,6 +71,8 @@ sv: Titta på <a href="gwsetup?lang=%l;v=traces.htm">utskriften</a>, kanske
 <p />
 
 [
+co: Osinnò pudete rivene à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: Or you can return to the
     <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
