--- a/bin/setup/lang/bso_log.htm
+++ b/bin/setup/lang/bso_log.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Cuntenutu di u schedariu risultatu
 en: Content of result file
 fr: Contenu du fichier résultat
 ]</title>
@@ -19,6 +20,7 @@ fr: Contenu du fichier résultat
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Cuntenutu di u schedariu risultatu
 en: Content of result file
 fr: Contenu du fichier résultat
 ]
@@ -30,6 +32,7 @@ fr: Contenu du fichier résultat
 <dl><dt><dd>
 <pre>
 %H{- [
+co: schedariu viotu
 de: empty file
 en: empty file
 es: fichero vacio
