--- a/bin/setup/lang/bso_ok.htm
+++ b/bin/setup/lang/bso_ok.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Basa di genealugia creata
 de: Datenbank angelegt
 en: Database created
 es: Base de datos creada
@@ -25,6 +26,7 @@ sv: Databasen skapad
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Basa di genealugia creata
 de: Datenbank angelegt
 en: Database created
 es: Base de datos creada
@@ -40,6 +42,8 @@ sv: Databasen skapad
 <p /><p />
 
 [
+co: Eccu. L’operazione hè compia. A vostra basa di genealugia
+    « %o » hè stata creata.
 de: Die Operation ist beendet. Deine Datenbank namens "%o" wurde angelegt.
 en: Done. The operation is terminated. Your database named "%o" is created.
 es: Muy bien. La operación a terminado. Su base de datos de nombre
@@ -56,6 +60,8 @@ sv: Operationen är avklarad. Din databas benämnd "%o" är skapad.
 <p />
 
 [
+co: Per fighjalla, è forse mudificalla, assicuratevi
+    chì u <a href="gwsetup?lang=%l;v=gwd_info.htm">serviziu gwd</a> sia lanciatu.
 de: Um mit der Datenbank zu arbeiten und Änderungen daran vornehmen zu
     können, muß der <a
     href="gwsetup?lang=%l;v=gwd_info.htm">gwd-Dienst</a> gestartet sein.
@@ -81,6 +87,9 @@ sv: För att konsultera din databas och möjligen modifiera den, måste <a
 <p />
 
 [
+co: Tandu, puderete accede à a vostra genealugia cù u liame quaghjò.
+    A pagina affissata hè l’accolta di a vostra basa.
+	Vi ricumandemu d’aghjunghjela à l’indette di u vostru navigatore.
 de: Sofern dies der Fall ist, probiere die unten angegebene Adresse aus. Die
     angezeigte Seite ist die "Willkommensseite" deiner Datenbank. Setze ein
     Lesezeichen auf diese Seite.
@@ -118,6 +127,8 @@ href="http://%m:%P/%o">http://%m:%P/%o</a>
 <p />
 
 [
+co: Pudete rivene dinù à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
     menu</a>.
@@ -137,6 +148,7 @@ sv: Du kan också återvända till <a
 <br /><p />
 
 [
+co: Cliccà <a href="gwsetup?lang=%l;v=bso_comm.htm">quì</a> per i messaghji d’alerta in u schedariu « comm.log » :
 en: Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the alert messages in the file "comm.log":
 fr: Cliquer <a href="gwsetup?lang=%l;v=bso_comm.htm">ici</a> pour les messages d’alerte dans le fichier "comm.log".
 ]
