--- a/bin/setup/lang/clean_ok.htm
+++ b/bin/setup/lang/clean_ok.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Operazione compia
 de: Operation durchgeführt
 en: Operation completed
 es: Operación terminada
@@ -25,6 +26,7 @@ sv: Operationen klar
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Operazione compia
 de: Operation durchgeführt
 en: Operation completed
 es: Operación terminada
@@ -40,6 +42,7 @@ sv: Operationen klar
 <p />
 
 [
+co: Eccu. A nettata di a vostra basa di dati « %a » hè compia.
 de: Deine Datenbank "%a" wurde erfolgreich aufgeräumt.
 en: So. The cleaning up of you database "%a" is completed.
 es: Hela aquí. La limpieza de su base "%a" ha terminado.
@@ -53,6 +56,10 @@ sv: Upprensningen av din databas "%a" är klar.
 <p />
 
 [
+co: A vostra basa di dati hè stata cumpletamente ricustruita :
+    a vechja versione si trova in u sottu-cartulare « old »
+	di u cartulare « %w ».
+	Ci pudete ricuperalla in casu di prublema.
 de: Die Datenbank wurde erfolgreich neu erzeugt: Die alte Version
     steht im Unterverzeichnis "old" im Verzeichnis "%w".
     Falls es Probleme geben sollte, kannst
@@ -84,6 +91,7 @@ sv: Din databas har blivit helt återskapad, den gamla versionen finns i
 <p />
 
 [
+co: Pudete cunsultà a vostra basa di dati netta netta…
 de: Du kannst nun mit deiner superaufgeräumten neuen Datenbank
     arbeiten…
 en: You can consult your very clean new database…
@@ -102,6 +110,7 @@ sv: Du kan nu konsultera din nya rena databas…
 <p /><br />
 
 … [
+co: osinnò rivinite à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu principale</a>.
 de: oder zurück zum
     <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a> springen.
 en: or return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
