--- a/bin/setup/lang/cleanup.htm
+++ b/bin/setup/lang/cleanup.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Nettata
 de: Aufräumen
 en: Clean up
 es: Limpieza
@@ -25,6 +26,7 @@ sv: Upprensning
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Nettata d’una basa di dati
 de: Eine Datenbank aufräumen
 en: Cleaning up a database
 es: Limpieza de una base de datos
@@ -38,6 +40,10 @@ sv: Upprensning av en databas
 </div>
 
 [
+co: S’è vò avete fattu mudificazioni numerose in a vostra
+    basa di dati, o avete aghjuntu dati numerosi, hè
+	ricumandatu di fà una nettata, soprattuttu s’è l’accessu
+	à a vostra basa di dati si face avà pianu pianu.
 de: Wenn du viele Änderungen an deiner Datenbank vorgenommen hast, oder
     einfach nur viele Daten eingegeben hast, dann ist es empfehlenswert, sie
     aufzuräumen, insbesondere falls du feststellst, daß sich der
@@ -72,6 +78,9 @@ sv: Om du har gjort många modifieringar i din databas, eller om du helt
 <p>
 <ul><li>
 [
+co: Per una nettata simplice, appiecate u <a
+    href="gwsetup?lang=%l;v=consang.htm">prugramma d’iniziu</a>
+	di e cunsanguinità.
 de: Um einfach aufzuräumen, wende die 
     <a href="gwsetup?lang=%l;v=consang.htm">Initialisierung der
     Blutsverwandtschaft</a> an.
@@ -101,6 +110,8 @@ sv: För en enkel upprensning, använd <a
 <input type="hidden" name="lang" value="%l" />
 
 [
+co: Per una nettata forte, selezziunate a vostra basa
+    di dati clicchendu nant’à u buttone assuciatu :
 de: Um radikal aufzuräumen, wähle deine Datenbank aus, indem du 
     den zugehörigen Schalter anklickst:
 en: For a radical cleaning up, select your database by clicking on the
@@ -126,6 +137,7 @@ sv: För en radikal upprensning, välj din databas genom att klicka på
 <td><a href="http://%m:%P/%a">%a</a></td>
 </tr>|
 <tr align="left"><td>- [
+co: ùn ci hè alcuna basa di dati à stu mumentu
 de: keine Datenbank vorhanden
 en: there is no database at present
 es: actualmente ninguna base de datos existe
@@ -139,6 +151,7 @@ sv: det finns ingen databas för tillfället
 <p>
 <li>
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 es: Y a continuación apoye en el botón siguiente:
@@ -150,6 +163,7 @@ sv: Tryck sedan på denna knapp:
 ]
 <p>
 <input type="submit" value="[
+co: Nettata
 de: Aufräumen
 en: Cleanup
 es: Limpieza
