--- a/bin/setup/lang/cleanup1.htm
+++ b/bin/setup/lang/cleanup1.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Nettata - Fasa 2
 de: Aufräumen - Phase 2
 en: Clean up - Phase 2
 es: Limpieza
@@ -25,6 +26,7 @@ sv: Rensa upp - fas 2
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Nettata
 de: Aufräumen
 en: Cleaning up
 es: Limpieza
@@ -40,6 +42,7 @@ sv: Rensa upp
 <p />
 
 [
+co: Avemu da principià a nettata di a basa di dati « %a ».
 de: Wir fahren nun mit dem Aufräumen der Datenbank "%a" fort.
 en: We are going to proceed to the cleaning up of the database "%a".
 es: Vamos a proceder a la limpieza de la base  "%a".
@@ -53,6 +56,8 @@ sv: Vi ska gå vidare med att rensa upp databasen "%a".
 <p />
 
 [
+co: Avertimentu : st’operazione pò piglià qualchì seconda o
+    qualchì minutu secondu à u casu. Aspettate per piacè.
 de: Achtung: Diese Operation kann je nach Fall einige Sekunden oder
     Minuten dauern. Bitte habe Geduld.
 en: Warning: this operation can take some seconds or minutes, depending on
@@ -73,6 +78,7 @@ sv: Varning: denna operation kan ta några sekunder eller minuter, beroende på
 <p />
 
 [
+co: Primete nant’à u buttone quaghjò per principià l’operazione.
 de: Drücke den Knopf, um die Operation zu starten.
 en: Push the button below to start the operation.
 es: Apoye en el botón siguiente para lanzar la operación.
@@ -93,6 +99,8 @@ sv: Tryck på knappen nedan för att starta operationen.
 <p />
 
 [
+co: Per a vostra infurmazione, st’operazione currisponde
+    à sta seguita di cumande :
 de: Zu deiner Information: Diese Funktion entspricht der Ausführung
     der folgenden Kommandos:
 en: For information, this operation corresponds to the following commands:
@@ -112,6 +120,7 @@ sv: Denna operation motsvarar de följande kommandona:
      $ %x%/gwu %a -o tmp.gw
      $ mkdir old
      [
+co: Sottu Unix :
 de: Unter Unix:
 en: Under Unix:
 fi: Unixissa:
@@ -121,6 +130,7 @@ it: Sotto Unix:
         $ rm -rf old/%a.gwb
         $ mv %a.gwb old/.
      [
+co: Sottu MSdos :
 de: Unter MSdos:
 en: Under MSdos:
 fi: MS-DOS:ssa:
