--- a/bin/setup/lang/del_ok.htm
+++ b/bin/setup/lang/del_ok.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Base di dati squassate
 de: Databanken gelöscht
 en: Databases deleted
 es: Bases destruidas
@@ -25,6 +26,7 @@ sv: Databaser raderade
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Base di dati squassate
 de: Databanken gelöscht
 en: Databases deleted
 es: Bases destruidas
@@ -40,6 +42,7 @@ sv: Databaser raderade
 <p />
 
 [
+co: Eccu e base di dati chì sò state squassate :
 de: Dies sind die gelöschten Datenbanken:
 en: Here are the deleted databases:
 es: Eh aquí las bases que han sido destruidas:
@@ -55,6 +58,7 @@ sv: Här är de raderade databaserna:
 <ul>
 
 %k{<li>%a|<li>- [
+co: nisuna selezzione
 de: no selection
 en: no selection
 es: ninguna selección
@@ -70,6 +74,7 @@ sv: inga val
 <p />
 
 [
+co: Eccu e base di dati chì stanu :
 de: Dies sind die verbleibenden Datenbanken:
 en: Here are the remaining databases:
 es: Eh aquí las bases que quedan:
@@ -86,6 +91,7 @@ sv: Här är de återstående databaserna:
 
 %b{<li><a href="http://%m:%P/%a">%a</a>|
 <li> [
+co: ùn ci hè alcuna basa di dati
 de: keine Datenbank vorhanden
 en: there is no database
 es: no queda ninguna base de datos
@@ -101,6 +107,7 @@ sv: det finns ingen databas
 <p />
 
 [
+co: Rivinite à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: Return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
 es: Regrese Ud al <a href="gwsetup?lang=%l;v=welcome.htm">menú
