--- a/bin/setup/lang/delete.htm
+++ b/bin/setup/lang/delete.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Squassà
 de: Datenbanken löschen
 en: Delete
 es: Supresión
@@ -25,6 +26,7 @@ sv: Radera
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Squassatura di base di dati
 de: Datenbanken löschen
 en: Deletion of databases
 es: Supresión de bases de datos
@@ -41,6 +43,8 @@ sv: Radering av databaser
 <input type="hidden" name="lang" value="%l" />
 <ul><li>
 [
+co: Selezziunate a basa o e base di dati ch’ellu ci vole
+    à squassà clicchendu nant’à u so buttone assuciatu.
 de: Wähle die Datenbanken, die du löschen möchtest, mit
     dem zugehörigen Schalter.
 en: Select the database or databases you want to delete, by clicking on the
@@ -67,6 +71,7 @@ sv: Välj den databas eller de databaser du vill radera, genom att klicka på
 <td><input type="checkbox" name="%a" value="on" /></td>
 </tr>|
 <tr align="left"><td>- [
+co: ùn ci hè alcuna basa di dati à stu mumentu
 de: keine Datenbank vorhanden
 en: there is no database at present
 es: actualmente no existe ninguna base de datos 
@@ -80,6 +85,7 @@ sv: det finns ingen databas för tillfället
 <p>
 <li>
 [
+co: Tandu appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then push this button:
 es: Luego apoye en este botón:
@@ -91,6 +97,7 @@ sv: Tryck sedan på denna knapp:
 ]
 <p>
 <input type="submit" value="[
+co: Cuntrollà
 de: Prüfen
 en: Check
 es: Verificar
