--- a/bin/setup/lang/delete_1.htm
+++ b/bin/setup/lang/delete_1.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Squassatura di base di dati
 de: Datenbanken löschen
 en: Deletion of databases
 es: Supresión de bases de datos
@@ -25,6 +26,7 @@ sv: Radering av databaser
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Squassatura di base di dati
 de: Datenbanken löschen
 en: Deletion of databases
 es: Supresión de bases de datos
@@ -44,6 +46,7 @@ sv: Radering av databaser
 %k{<input type="hidden" name="%a" value="del" />|}
 
 [
+co: Site sicuru di vulè squassà ste base di dati ?
 de: Bist du sicher, daß du diese Datenbanken löschen möchtest?
 en: Are you sure you want to delete these databases?
 es: Esta Ud seguro de querer suprimir estas bases?
@@ -60,6 +63,7 @@ sv: Är du säker att du vill radera dessa databaser?
 
 %k{<li><a href="http://%m:%P/%a">%a</a>|
 <li>- [
+co: nisuna selezzione
 de: no selection
 en: no selection
 es: ninguna selección
@@ -75,6 +79,8 @@ sv: inga val
 <p />
 
 [
+co: Avertimentu : sta squassatura hè irriversibile !
+    Per cunfirmà, appughjate nant’à stu buttone.
 de: Achtung: Diese Auswahl ist unwiderruflich! Zur Bestätigung bitte
     diesen Kopf drücken:
 en: Warning: this suppression is definitive! To confirm, push this button.
@@ -93,6 +99,7 @@ sv: Varning: detta val är definitivt! För att bekräfta, tryck på denna knapp
 <p />
 
 <dl><dt><dd><input type="submit" value="[
+co: Squassà
 de: Löschen
 en: Delete
 es: Destruir
@@ -106,6 +113,8 @@ sv: Radera
 <p />
 
 [
+co: Osinnò rivinite à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: Or return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
 es: O, regrese Ud. al <a href="gwsetup?lang=%l;v=welcome.htm">menú
