--- a/bin/setup/lang/err_acc.htm
+++ b/bin/setup/lang/err_acc.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Accessu difesu
 de: Zugriff verboten
 en: Forbidden access
 es: Acceso Prohibido
@@ -25,6 +26,7 @@ sv: Förbjuden åtkomst
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 <font color="red">[
+co: Accessu difesu
 de: Zugriff verboten
 en: Forbidden access
 es: Acceso prohibido
@@ -37,6 +39,8 @@ sv: Förbjuden åtkomst
 </div>
 
 [
+co: Ùn avete micca u permessu d’accede à stu serviziu.
+    Solu l’indirizzu « %o » pò impiegallu.
 de: Du bist nicht berechtigt, diesen Dienst zu nutzen. Nur die 
     Adresse "%o" darf ihn verwenden.
 en: You are not allowed to access this service. Only the address "%o" can
@@ -59,6 +63,8 @@ sv: Du har inte tillåtelse att komma åt denna service. Bara adressen "%o" kan
 <p />
 
 [
+co: Per francà st’interdettu, ci vole à mudificà u schedariu
+    « %y » è rimpiazzà a linea cuntenendu <tt>%o</tt>" da "<tt>%a</tt>".
 de: Um dies zu ändern, bearbeite die Datei "%y" und ändere die
     Zeile, in der "<tt>%o</tt>" steht in "<tt>%a</tt>".
 en: To change that, edit the file named "%y" and change the line holding:
