--- a/bin/setup/lang/err_cnfl.htm
+++ b/bin/setup/lang/err_cnfl.htm
@@ -19,6 +19,7 @@
 
 
 [
+co: U nome « %o » hè impiegatu parechje volte.
 de: Der Name "%o" wird mehrfach benutzt.
 en: The name "%o" is used several times.
 es: El nombre "%o" es utilisado varias veces.
@@ -32,6 +33,7 @@ sv: Namnet "%o" är använt flera gånger.
 <p />
 
 [
+co: Rivinite à a pagina precedente è fate a currezzione.
 de: Bitte kehre auf die vorherige Seite zurück und korrigiere den Fehler.
 en: Return to the previous page and correct.
 es: Regrese a la página anterior y corrija el error. 
