--- a/bin/setup/lang/err_miss.htm
+++ b/bin/setup/lang/err_miss.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Nome assente
 de: Fehlender Name
 en: Missing name
 es: Nombre faltante
@@ -25,6 +26,7 @@ sv: Det fattas namn
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 <font color="red">[
+co: Nome assente
 de: Fehlender Name
 en: Missing name
 es: Nombre faltante
@@ -38,6 +40,8 @@ sv: Det fattas namn
 </div>
 
 [
+co: Ùn hè micca pussibule d’eseguisce sta cumanda.
+    Ùn avete micca datu abbastanza infurmazioni.
 de: Dein Kommando kann nicht ausgeführt werden. Du hast nicht
     genügend Informationen angegeben.
 en: It is not possible to execute your command. You did not give enough
@@ -57,6 +61,7 @@ sv: Det är inte möjligt att utföra ditt kommando. Du angav inte tillräckligt
 <p />
 
 [
+co: Rivinite à a <a href="%n">pagina precedente</a>.
 de: Gehe zurück auf die <a href="%n">vorherige Seite</a>.
 en: Go back to the <a href="%n">previous page</a>.
 es: Regrese Ud. a la <a href="%n">página anterior</a>.
