--- a/bin/setup/lang/err_name.htm
+++ b/bin/setup/lang/err_name.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Nome incurrettu
 de: Falscher Name
 en: Incorrect name
 es: Nombre incorrecto
@@ -25,6 +26,7 @@ sv: Felaktigt namn
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 <font color="red">[
+co: Nome incurrettu
 de: Falscher Name
 en: Incorrect name
 es: Nombre incorrecto
@@ -37,6 +39,8 @@ sv: Felaktigt namn
 </div>
 
 [
+co: Ùn pudete micca sceglie « %o » cum’è nome
+    di basa di dati chì ellu cuntene caratteri difesi.
 de: Du kannst "%o" nicht als Datenbanknamen verwenden, da unerlaubte
     Zeichen enthalten sind.
 en: You cannot choose "%o" as database name, because it holds forbidden
@@ -58,6 +62,9 @@ sv: Du kan inte välja "%o" som din databas namn, därför namnet innhåller
 <p />
 
 [
+co: U nome d’una basa di dati hè fattu da lettere senza aletta
+    (maiuscule o minuscule), cifri è di u caratteru « - ».
+	L’altri caratteri (è dunque u spaziu) sò difesi.
 de: Der Name einer Datenbank kann nur aus einfachen Buchstaben (klein oder
     groß, keine Sonderzeichen oder Umlaute), Ziffern und dem Zeichen "-" 
     bestehen. Alle anderen Zeichen (insbesondere das Leerzeichen) sind
