--- a/bin/setup/lang/err_ndir.htm
+++ b/bin/setup/lang/err_ndir.htm
@@ -18,6 +18,7 @@
 </div>
 
 [
+co: Ùn ci hè micca cartulare di stu nome :
 de: Es gibt kein Verzeichnis mit diesem Namen:
 en: There is no directory with this name:
 es: No existe ninguna carpeta con el nombre:
@@ -37,6 +38,7 @@ sv: Det finns ingen katalog med det namnet:
 <p />
 
 [
+co: Rivinite à u screnu precedente è indicate u cartulare currettu.
 de: Bitte kehre zurück auf die vorherige Seite und gib einen
     korrekten Verzeichnisnamen ein.
 en: Return to the previous screen and write the good directory.
