--- a/bin/setup/lang/err_ngw.htm
+++ b/bin/setup/lang/err_ngw.htm
@@ -19,6 +19,7 @@
 </div>
 
 [
+co: Avete selezziunatu u cartulare :
 de: Du hast folgendes Verzeichnis ausgewählt:
 en: You selected the directory:
 es: Ud ha seleccionado la carpeta:
@@ -36,6 +37,9 @@ sv: Du valde katalogen:
 </pre>
 
 [
+co: Ma ùn cuntene micca a cumanda « gwu » richiesta per u
+    trasferimentu di a vostra basa di dati. Site sicuru chì ghjè
+	un cartulare d’una distribuzione <font color=#2f6400><b>GeneWeb</b></font>
 de: Dieses Verzeichnis enthält aber nicht das Kommando "gwu", welches
     nötig ist, um die Datenbank zu übertragen. Bist Du sicher,
     daß dieses Verzeichnis ein <font
@@ -69,6 +73,10 @@ sv: Men den innehåller inte kommandot "gwu" nödvändig fär att överföra din
 <p />
 
 [
+co: Osinnò, forse hè una versione à l’anticogna
+    di <font color=#2f6400><b>GeneWeb</b></font> quandu a cumanda « gwu » si
+	chjamava « gwb2gw ». In tale casu, rinuminate u schedariu « gwb2gw »
+	in « gwu » in stu cartulare è pruvate torna.
 de: Möglicherweise handelt es sich auch um eine sehr alte Version von
     <font color=#2f6400><b>GeneWeb</b></font>, in der das Kommando "gwu"
     noch "gwb2gw" hieß. Wenn dies der Fall ist, benenne die Datei
@@ -106,6 +114,7 @@ sv: Eller annars, kan det vara en väldigt gammal version av <font
 <p />
 
 [
+co: Rivinite à u screnu precedente.
 de: Kehre zur vorherigen Seite zurück.
 en: Return to the previous screen.
 es: Regrese Ud. a la pantalla anterior.
