--- a/bin/setup/lang/err_reco.htm
+++ b/bin/setup/lang/err_reco.htm
@@ -19,6 +19,11 @@
 
 
 [
+co: A cumanda precedente s’hè piantata cù un codice
+    di sbagliu. Forse a vostra basa di dati « %o »
+	ùn hè micca stata creata. Ci vole à fighjà e <a
+	href="gwsetup?lang=%l;v=traces.htm">traccie</a>,
+	forse ci truverete una spiegazione.
 de: Das vorangegangene Kommando hat beim Beenden einen Fehler geliefert.
     Deine Datenbank "%o" wurde möglicherweise nicht angelegt.
     Du kannst dir seine <a
@@ -57,6 +62,11 @@ sv: Föregående kommando avslutades med en felkod. Din databas "%o" kanske
 <p />
 
 [
+co: Forse site partutu(a) d’una versione à l’anticogna di
+    <font color=#2f6400><b>GeneWeb</b></font>. In tale casu, <a
+	href="gwsetup?lang=%l;v=recover.htm">pruvate torna</a> di fà
+	u trasferimentu impieghendu l’ozzione « Passate da un schedariu GEDCOM »
+	(pudete fallu dinù da u screnu precedente).
 de: Möglicherweise kommst du von einer zu alten
     <font color=#2f6400><b>GeneWeb</b></font>-Version. In diesem Fall
     solltest du es <a href="gwsetup?lang=%l;v=recover.htm">nochmal
@@ -98,6 +108,10 @@ sv: Du kanske har gått från en alltför gammal version av
 <p />
 
 [
+co: S’ella hè ciò chì vò avete dighjà fattu,
+    è chì ùn funziuneghja sempre micca bè, dumandate l’aiutu
+	di u sviluppatore di <font color=#2f6400><b>GeneWeb</b></font>.
+	Ci vole à mandallu e traccie di a cumanda.
 de: Falls du aber genau das schon versucht hast, und es immer noch nicht
     besser geklappt hat, solltest du den
     <font color=#2f6400><b>GeneWeb</b></font>-Autor um Hilfe
@@ -130,6 +144,8 @@ sv: Om du redan har gjort det och det inte fungerade bättre, fråga
 <p />
 
 [
+co: Pudete rivene à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
 es: Ud. puede regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
