--- a/bin/setup/lang/err_unkn.htm
+++ b/bin/setup/lang/err_unkn.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Schedariu scunnisciutu
 de: Unbekannte Datei
 en: Unknown file
 es: Fichero desconocido
@@ -25,6 +26,7 @@ sv: Okänd fil
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 <font color="red">[
+co: Schedariu scunnisciutu
 de: Unbekannte Datei
 en: Unknown file
 es: Fichero desconocido
@@ -39,6 +41,7 @@ sv: Okänd fil
 <br /><p />
 
 [
+co: Per disgrazia, stu schedariu hè scunnisciutu :
 de: Sorry, aber diese Datei ist nicht bekannt:
 en: Sorry, this file is unknown:
 es: Lamentablemente este fichero es desconocido:
@@ -58,6 +61,7 @@ sv: Denna fil är okänd:
 <p />
 
 [
+co: Rivinite à a pagina precedente è selezziunate u schedariu currettu.
 de: Kehre zurück auf die vorherige Seite und wähle 
     eine richtige Datei aus.
 en: Return to the previous page and select the correct file.
