--- a/bin/setup/lang/gw2gd_ok.htm
+++ b/bin/setup/lang/gw2gd_ok.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Operazione compia
 de: Operation durchgeführt
 en: Operation completed
 es: Operación terminada
@@ -25,6 +26,7 @@ sv: Operationen klar
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Operazione compia
 de: Operation durchgeführt
 en: Operation completed
 es: Operación terminada
@@ -38,6 +40,7 @@ sv: Operationen klar
 </div>
 
 [
+co: L’estrazzione di u schedariu GEDCOM hè compia.
 de: Die Extraktion der GEDCOM-Datei ist beendet.
 en: The extraction of the GEDCOM file is terminated.
 es: Bién. La extracción del fichero GEDCOM ha terminado.
@@ -51,6 +54,7 @@ sv: Exporten av GEDCOM-filen är avslutad.
 <p />
 
 [
+co: Què hà custruitu un schedariu chjamatu « %o ».
 de: Es wurde eine Datei namens "%o" erzeugt.
 en: This has built a file named "%o".
 es: Esta operación ha creado un fichero que tiene por nombre "%o".
@@ -64,6 +68,7 @@ sv: Det har skapats en fil benämnd "%o".
 <p />
 
 [
+co: Stu schedariu si trova in u cartulare
 de: Diese Datei steht ihm Verzeichnis
 en: This file is in the directory
 es: Este fichero se encuentra en la carpeta
@@ -75,6 +80,8 @@ it: Questo file si trova nella directory
 <p />
 
 [
+co: Pudete rivene à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
 es: Si Ud. desea regresar al <a href="gwsetup?lang=%l;v=welcome.htm">menú
