--- a/bin/setup/lang/gwc.htm
+++ b/bin/setup/lang/gwc.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Impurtazione d’un schedariu GeneWeb
 de: GeneWeb-Quelldatei importieren
 en: Import a GeneWeb file
 es: Importación d'un fichero GeneWeb
@@ -24,6 +25,7 @@ sv: Importera en GeneWeb källfil
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Impurtazione d’un schedariu GeneWeb
 de: GeneWeb-Quelldatei importieren
 en: Import of a GeneWeb file
 es: Importación d'un fichero GeneWeb
@@ -41,6 +43,7 @@ sv: Importera en GeneWeb källfil
 
 <ul><li>
 [
+co: Selezziunate u vostru schedariu di fonte GeneWeb (finischendu da « .gw ») ;
 de: Bitte gib folgende Daten ein kompletter Name deiner <font
     color=#2f6400><b>GeneWeb</b></font>-Quelldatei (inklusive Endung ".gw");
 en: Select the name of your GeneWeb source file (ending with ".gw");
@@ -58,6 +61,7 @@ sv: Skriv in det kompletta namnet för din <font
 <table class="setup">
 <tr align=left><td>
 <ul><li>[
+co: Selezziunate u nome di u schedariu di fonte, o navigate in i vostri cartulari.
 en: Select the source file or navigate in your foldres.
 fr: Sélectionnez le nom du fichier source, ou naviguez dans vos dossiers.
 ]
@@ -67,6 +71,9 @@ fr: Sélectionnez le nom du fichier source, ou naviguez dans vos dossiers.
 </td></tr>
 <tr align=left><td>
 <ul><li>[
+co: o scrivite puru u nome di u o di i schedarii di fonte GeneWeb relativamente à u chjassu inzù.<br>
+    S’è stu parametru cuntene u caratteru « * », ci vulerà à pruvede
+	un nome unicu per a basa di dati chì serà creata.
 en: or provide directly the name of the GeneWeb source file(s) relative to the path above.<br>
     If this parameter contains the '*' character, you must provide a unique name for created database.
 fr: ou donnez directement le nom du ou des fichiers source GeneWeb en complément du chemin ci-dessus.<br>
@@ -83,10 +90,15 @@ fr: ou donnez directement le nom du ou des fichiers source GeneWeb en complémen
 <span style="font-size:80%%">
 <table>
 <tr><td valign="top">[
+co: Nota :
 en: Note:
 fr: Note :
 ]</td>
 <td>[
+co: ../ vi permette di navigà fine à u cartulare di a radica.<br>
+    In u mondu Windows, st’azzione ùn vi permitterà micca di
+	cambià a lettera di u lettore (C: -> D:), ma puderete fà
+	què direttamente in l’indirizzu di u vostru navigatore.
 en: ../ allows you to reach the parent directory.<br>
     In the Windows world, this will be
     insufficient to change the drive letter (C: -> D:), but you can do this directly
@@ -101,6 +113,8 @@ fr: ../ vous permet de naviguer vers le dossier parent.<br>
 <p>
 <li>
 [
+co: Scrivite u nome chì vò vulete dà à a vostra basa
+    di dati <font color=#2f6400><b>GeneWeb</b></font>.
 de: Den Namen, den du deiner <font
     color=#2f6400><b>GeneWeb</b></font>-Datenbank geben möchtest.
 en: Enter the name you want to give to your <font
@@ -121,6 +135,8 @@ sv: Namnet du vill kalla din <font color=#2f6400><b>GeneWeb</b></font>
 <tr align=left><td>
 <input name=o size=30>
 [
+co: S’è ùn scrivite nunda,
+    serà deduttu secondu u nome di u schedariu di fonte GeneWeb.
 de: Wenn du nichts eingibst, wird der Name aus deiner <font
     color=#2f6400><b>GeneWeb</b></font>-Quelldatei abgeleitet.
 en: If you write nothing, it
@@ -141,6 +157,7 @@ sv: Om du inte skriver någonting, kommer namnet att bli härlätt
 <p>
 <li>
 [
+co: Selezziunate l’ozzioni chì vò vulete :
 de: Wähle die gewünschten Optionen:
 en: Select the options you want:
 es: Seleccione las opciones que Ud. desee:
@@ -154,6 +171,8 @@ sv: Välj de optioner du vill ha:
 <tr align=left>
 <td><input type=checkbox name=stats value="on">   </td>
 <td>[
+co: Affissà certe statistiche
+    à a fine (chì seranu videvule in e traccie).
 de: Statistiken nach Abschluß der
     Operation ausgeben (sind dann in der Trace-Ausgabe sichtbar).
 en: Display some statistics at the end (they will be visible in the traces).
@@ -174,6 +193,7 @@ sv: Visa statistik på slutet (den kommer att synas i utskriften).
 <tr align=left>
 <td><input type=checkbox name=nc value="on">   </td>
 <td>[
+co: Ùn micca verificà a cuerenza di i dati.
 de: Datenkonsistenz nicht überprüfen.
 en: Do not check the consistency of the data.
 es: No verificar la coherencia de los datos.
@@ -188,6 +208,7 @@ sv: Kontrollera inte att databasens data är OK.
 <tr align=left>
 <td><input type=checkbox name=cg value="on">   </td>
 <td>[
+co: Finisce da u pre-calculu di e cunsanguinità.
 de: Initialisierung der Blutsverwandtschaften auch durchführen.
 en: End by the initialization of consanguinities.
 es: Terminar por el cálculo previo de consanguinidad.
@@ -203,6 +224,7 @@ sv: Avsluta med att beräkna blodsbanden.
 <tr align=left>
 <td><input type=checkbox name=f value="on">   </td>
 <td>[
+co: Squassà a basa di dati s’ella esiste dighjà.
 en: Delete database if already existing.
 fr: Détruire la base pré-existante.
 ]</td>
@@ -212,6 +234,7 @@ fr: Détruire la base pré-existante.
 <p>
 <li>
 [
+co: È appughjate nant’à « Vai ».
 de: Dann drücke "Ok".
 en: Then click on "Ok".
 es: Finalmente cliquear en "Ok".
