--- a/bin/setup/lang/bso_comm.htm
+++ b/bin/setup/lang/bso_comm.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Cuntenutu di u schedariu comm.log
 de: Inhalt der Datei "comm.log"
 en: Content of comm.log
 es: Contenido del fichero "comm.log"
@@ -24,6 +25,7 @@ sv: Innehållet i filen "comm.log"
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Cuntenutu di u schedariu comm.log
 de: Inhalt der Datei "comm.log"
 en: Content of comm.log
 es: Contenido del fichero "comm.log"
@@ -40,6 +42,7 @@ sv: Innehållet i filen "comm.log"
 <dl><dt><dd>
 <pre>
 %g{- [
+co: schedariu viotu
 de: empty file
 en: empty file
 es: fichero vacio
