--- a/bin/setup/lang/connex_ok.htm
+++ b/bin/setup/lang/connex_ok.htm
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Cumpunenti cunnessi identificati
 en: Connected components identified
 fr: Calcul des composantes connexes exécuté
 ]</title>
@@ -18,6 +19,7 @@ fr: Calcul des composantes connexes exécuté
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Cumpunenti cunnessi identificati
 en: Connected components identified
 fr: Calcul des composantes connexes exécuté
 ]
@@ -25,12 +27,14 @@ fr: Calcul des composantes connexes exécuté
 </div>
 
 [
+co: Pudete cunsultà i risultati da duie manere sfarente :
 en: You may observe results through two means:
 fr: Vous pouvez consulter les résultats de deux façons différentes :
 ]
 <ul>
 <li>
 [
+co: Fighjendu in a finestra chì s’hè aperta s’è ùn avete micca dumandatu di ridirezzione di i risultati. 
 en: By looking at the terminal window if you have not asked for result redirection.
 fr: En regardant dans la fenêtre qui s'est ouverte si vous n'avez pas demandé de redirection des résultats.
 ]
@@ -38,6 +42,12 @@ fr: En regardant dans la fenêtre qui s'est ouverte si vous n'avez pas demandé 
 <li>
 %Io1;;{
 [
+co: Impieghendu <b>gwd</b> per <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">fighjà
+    u schedariu</a> in u cartulare NOTES induve i risultati sò stati ridiretti (%a.gwb/notes_d/connex.txt).<br>
+	Ci viderete l’ultimi dati arregistrati in stu locu
+	(chì ùn sò micca necessariamente quelli chì vò vinite di calculà
+	- fighjate a stampiglia di data è ora in capu di schedariu).<br>
+	Sta suluzione vi permette di seguità i liami ver di e persone indettate.
 en: Using <b>gwd</b> to <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">visualize the 
     file</a> in the NOTES folder of your base where you have redirected output (%a.gwb/notes_d/connex.txt).<br>
     This file contains the last set of data stored at this location (which is not necessarily the one you have just computed
@@ -53,6 +63,7 @@ fr: En utilisant <b>gwd</b> pour <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=
 ]
 |
 [
+co: Impieghendu <b>gwsetup</b> per <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">fighjà u schedariu</a> induve i risultati sò stati ridiretti ("%K")
 en: Using <b>gwsetup</b> to <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualize the file</a> in which results were redirected ("%K").
 fr: En utilisant <b>gwsetup</b> pour <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualiser le fichier</a> vers lequel ont été envoyés les résultats ("%K").
 ]
@@ -61,6 +72,8 @@ fr: En utilisant <b>gwsetup</b> pour <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm
 
 <p />
 [
+co: Osinnò pudete rivene à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: Zurück zum <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a>.
 en: Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main
     menu</a>.
