--- a/bin/setup/lang/consang.htm
+++ b/bin/setup/lang/consang.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Iniziu di e consanguinità
 de: Blutsverwandtschaften
 en: Consanguinities
 es: Consanguinidades
@@ -25,6 +26,7 @@ sv: Blodsband
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Iniziu di e consanguinità
 de: Blutsverwandtschaften
 en: Consanguinities
 es: Consanguinidades
@@ -38,6 +40,9 @@ sv: Blodsband
 </div>
 
 [
+co: U prugramma d’iniziu di e cunsanguinità hè necessariu
+    per chì e cunsanguinità s’affisseghjinu quandu si
+	navigheghja in a basa di dati.
 de: Die Initialisierung der Blutsverwandtschaften ist notwendig, damit
     sie beim Abrufen der Datenbank angezeigt werden können.
 en: The initialization of consanguinities is necessary so that the
@@ -65,6 +70,8 @@ sv: Beräkningen av blodsbanden är nödvändig för att
 <input type="hidden" name="q" value="on" />
 <ul><li>
 [
+co: Selezziunate a vostra basa di dati clicchendu
+    nant’à u buttone assuciatu.
 de: Wähle deine Datenbank mit dem zugehörigen Schalter.
 en: Select your database by clicking on the associated button.
 es: Seleccione su base de datos cliqueando en el botón asociado.
@@ -87,6 +94,7 @@ sv: Välj din databas genom att klicka på motsvarande knapp.
 </tr>|
 <tr align="left">
 <td>- [
+co: ùn ci hè alcuna basa di dati à stu mumentu
 de: keine Datenbank vorhanden
 en: there is no database at present
 es: no existe ninguna base de datos actualmente
@@ -101,6 +109,7 @@ sv: det finns ingen databas för tillfället
 <p />
 <li>
 [
+co: Selezziunate l’ozzione s’ella vi piace :
 de: Falls gewünscht, wähle die folgende Option:
 en: Select the option if you want:
 es: Seleccione eventualmente la opción propuesta:
@@ -117,6 +126,7 @@ sv: Välj option om du vill:
 <tr align="left">
 <td><input type="checkbox" name="scratch" value="on" />   </td>
 <td>[
+co: Riprincipià u calculu nant’à a basa sana.
 de: Komplett neu berechnen.
 en: Restart the computing from scratch.
 es: Recomenzar el cálculo de toda la base.
@@ -131,6 +141,7 @@ sv: Starta beräkning från början.
 <p />
 <li>
 [
+co: È appughjate nant’à stu buttone :
 de: Dann drücke diesen Knopf:
 en: Then press this button:
 es: Luego apoye en este botón:
@@ -144,6 +155,7 @@ sv: Tryck sedan på denna knapp:
 <p />
 
 <input type="submit" value="[
+co: Consanguinità
 de: Initialisieren
 en: Consang
 es: Consanguinidades
