--- a/bin/setup/lang/consg_ok.htm
+++ b/bin/setup/lang/consg_ok.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Operazione compia
 de: Operation durchgeführt
 en: Operation completed
 es: Operación terminada
@@ -25,6 +26,7 @@ sv: Operationen klar
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 [
+co: Operazione compia
 de: Operation durchgeführt
 en: Operation completed
 es: Operación terminada
@@ -38,6 +40,8 @@ sv: Operationen klar
 </div>
 
 [
+co: Eccu. L’operazione « %d » nant’à a basa di dati
+    « %a » hè compia.
 de: So. Die Operation "%d" auf der Datenbank "%a" ist beendet.
 en: So. The operation "%d" on the database "%a" is terminated.
 es: Hela aquí. La operación "%d" sobre la base "%a" ha 
@@ -53,6 +57,7 @@ sv: Operationen "%d" på databasen "%a" är avslutad.
 <p />
 
 [
+co: Pudete cunsultalla :
 de: Du kannst nun mit deiner Datenbank arbeiten…
 en: You can consult it:
 es: Ud puede consultarla:
@@ -70,6 +75,8 @@ sv: Du kan konsultera den:
 <p /><br />
 
 … [
+co: osinnò rivinite à u <a href="gwsetup?lang=%l;v=welcome.htm">listinu
+    principale</a>.
 de: oder zurück zum
     <a href="gwsetup?lang=%l;v=welcome.htm">Hauptmenü</a> springen.
 en: or return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.
