--- a/bin/setup/lang/err_outd.htm
+++ b/bin/setup/lang/err_outd.htm
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
   <title>[
+co: Pagina antica à rinnovà
 de: Seite nicht aktuell
 en: Page outdated
 es: Página no actualizada
@@ -25,6 +26,7 @@ sv: Sidan är gammal
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
 <h1 style="margin:0;">
 <font color="red">[
+co: Pagina antica à rinnovà
 de: Seite nicht aktuell
 en: Page outdated
 es: Página no actualizada
@@ -39,6 +41,7 @@ sv: Sidan är gammal
 <br /><p />
 
 [
+co: A pagina precedente ùn hè micca attuale.
 de: Die vorherige Seite enthält veraltete Daten.
 en: The previous page is outdated.
 es: La página anterior no ha sido actualizada.
@@ -52,6 +55,8 @@ sv: Den föregående sidan är gammal.
 <p />
 
 [
+co: Rivinite in daretu è selezziunate « Attualizà »
+    in u vostru navigatore web.
 de: Bitte gehe zurück und führe die Funktion "Seite neu
     laden" deines Webbrowsers aus.
 en: Go backward and select "reload" in your Web browser.
