--- a/bin/setup/lang/err_smdr.htm
+++ b/bin/setup/lang/err_smdr.htm
@@ -20,6 +20,8 @@
 <br /><p />
 
 [
+co: Avete selezziunatu u listessu cartulare chì
+    quellu di sta distribuzione <font color=#2f6400><b>GeneWeb</b></font>.
 de: Du hast das gleiche Verzeichnis gewählt wie das dieser
     <font color=#2f6400><b>GeneWeb</b></font>-Installation.
 en: You selected the same directory than the one of this
